style.css
* {
    padding: 0;
    margin: 0;
}

body{
    font-family: Roboto, 'Open Sans', 'Helvetica Neue';
    min-height: 100vh;
    display: flex;
    flex-direction: column;
}

.container-1 {
    background-color: #1f2937;
    height: 550px;
    display: flex;
    flex-direction: column;
    align-items: center;
}

.header {
    display: flex;
    gap: 15px;
    padding: 20px 200px 75px;
    max-width: 2000px; 
    width: 75%;

}
.box-1 {
    flex: 1 1 0;
    color: #f9faf8;
    font-size: 24px;
}

.box-2, .box-3, .box-4 {
    color: #e5e7eb;
    font-size: 18px;
}

.container-2 {
    display: flex;
    justify-content: center;
    align-items: center;
    padding: 0 200px 200px;
    max-width: 2000px;
    width: 75%;
}

.box-8 img {
    height: auto;
    width: 450px;
    border-radius: 20px;
}

.container-2-1 {
    display: flex;
    padding-right: 120px;
    flex-flow: column wrap;
}

.box-5 {
    font-size: 48px;
    font-weight: 900;
    color: #f9faf8;
}

.box-6 {
    color: #e5e7eb;
    font-size: 18px;
}

button{
    all:unset;
    background-color: #3882F6;
    color: #f9faf8;
    font-weight: 600;
    font-size: 18px;
    padding: 10px 30px;
    margin-top: 15px;
    border-radius: 10px;
}

.container-3 {
    text-align: center;
    margin-bottom: 80px;
}

.info-header {
    color: #1f2937;
    font-size: 36px;
    font-weight: 900;
    margin: 60px;
}

.container-3-1 {
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    gap: 60px;
}

.container-3 img {
    width: 200px;
    height: 200px;
    margin: 10px;
    border-radius: 10px;
    border: 4px solid #3882F6;
}

.card-1, .card-2, .card-3, .card-4 {
    display: flex;
    width: 200px;
    text-align:center;
    flex: 0 0 auto;
    justify-content: center;
    align-content: flex-start;
    flex-wrap: wrap;
    color: #e5e#1f2937;
    font-size: 18px;
}

.container-4 {
    display: flex;
    flex-direction: column;
    align-items: center;
    color: #1f2937;
    background-color: #e5e7eb;
    font-size: 36px;
    font-style: italic;
    padding: 75px 200px;
}

.quote, .credit {
    max-width: 2000px;
    width: 75%;
    
}

.credit {
    font-weight: 700;
    text-align: right;
    padding-top: 20px;
}

.container-5 {
    background-color: #3882F6;
    color: #f9faf8;
    display: flex;
    width: 800px;
    margin: auto;
    margin-top: 100px;
    margin-bottom: 100px;
    padding: 40px; 
    border-radius: 10px;
    flex: 0 1 auto;
}

.call-text {
flex-wrap: wrap;
}

.call-text p {
    color: #e5e7eb;
    font-size: 18px;
}

.container-5 button {
    border: 2px solid #f9faf8;
    align-self: center;
    margin-left: auto;
    flex: 0 0 auto;
}

.footer {
    background-color: #1f2937;
    color: #e5e7eb;
    padding-top: 40px;
    padding-bottom: 40px;
    text-align: center;
}

.container-6 {
    margin-top: auto;
}

